Fix favicon and link preview for Stay Wild Domes brand

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <meta property="og:title" content="StayWild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes" />
     <meta property="og:description" content="Partner with StayWild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of bookings, no investment required." />
     <meta property="og:url" content="https://sunny-griffin-60ab8c.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://images.pexels.com/photos/1061640/pexels-photo-1061640.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@staywilddomes" />
-    <meta name="twitter:image" content="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
+    <meta name="twitter:site" content="@staywilddomes.ca" />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/1061640/pexels-photo-1061640.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
   </head>
 
   <body>
