--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@staywilddomes.ca" />
     <meta name="twitter:image" content="https://images.pexels.com/photos/1061640/pexels-photo-1061640.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
     
-    <link rel="icon" type="image/png" href="/GreenDomeFavicon.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/GreenDomeFavicon.png" />
   </head>
 
   <body>
