--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StayWild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes</title>
-    <meta name="description" content="Partner with StayWild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of all bookings. Perfect for Canadian landowners seeking passive income." />
-    <meta name="author" content="StayWild Domes" />
-    <meta name="keywords" content="glamping domes on your land, eco dome Airbnb income, how to make money with unused land, geodesic domes, Canada glamping" />
+    <title>Stay Wild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes</title>
+    <meta name="description" content="Partner with Stay Wild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of all bookings. Perfect for Canadian landowners seeking passive income." />
+    <meta name="author" content="Stay Wild Domes" />
+    <meta name="keywords" content="glamping domes on your land, eco dome Airbnb income, how to make money with unused land, geodesic domes, Canada glamping, Stay Wild Domes" />
 
-    <meta property="og:title" content="StayWild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes" />
-    <meta property="og:description" content="Partner with StayWild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of bookings, no investment required." />
+    <meta property="og:title" content="Stay Wild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes" />
+    <meta property="og:description" content="Partner with Stay Wild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of bookings, no investment required." />
     <meta property="og:url" content="https://sunny-griffin-60ab8c.netlify.app" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.pexels.com/photos/1061640/pexels-photo-1061640.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
