--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Stay Wild Domes - Turn Your Land Into Passive Income with Eco-Luxury Domes" />
     <meta property="og:description" content="Partner with Stay Wild Domes to place eco-luxury geodesic domes on your land. We handle everything - you earn 15-25% of bookings, no investment required." />
     <meta property="og:url" content="https://sunny-griffin-60ab8c.netlify.app" />
+    <meta property="og:url" content="https://staywilddomes.com" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.pexels.com/photos/1061640/pexels-photo-1061640.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630&fit=crop" />
     
